🗂️ refactor: DB 파일 및 로그를 별도 폴더로 정리
폴더 구조 개선:
- data/: DB 파일 저장 (stock_data.db, secrets.db)
- logs/: 로그 파일 저장
- backup/: DB 백업 파일 저장
- 각 폴더에 .gitkeep 추가 (폴더 구조 유지)

코드 수정:
- database.py: DB 경로를 data/stock_data.db로 변경
- secrets_manager.py: DB 경로를 data/secrets.db로 변경

설정 파일 업데이트:
- .gitignore: data/, logs/, backup/ 내 파일 제외, .gitkeep 유지
- .dockerignore: data/, logs/, backup/ 폴더 제외
- docker-compose.yml: 볼륨 마운트를 폴더 단위로 변경
- README.md: 새로운 폴더 구조 문서화

장점:
- 프로젝트 루트가 깔끔해짐
- DB, 로그, 백업 파일이 체계적으로 관리됨
- DataGrip 등 DB 도구로 접근 시 경로가 명확해짐

--- a/.dockerignore
+++ b/.dockerignore
@@ -9,20 +9,16 @@ env/
 ENV/
 
 # 민감한 정보는 볼륨으로 마운트하므로 제외
-# secrets.db는 docker-compose.yml에서 마운트
-# .env는 docker-compose.yml에서 마운트
+# data/, logs/, backup/은 docker-compose.yml에서 마운트
+data/
+logs/
+backup/
+.env
 
 # 이미지 파일
 *.png
 *.jpg
 *.jpeg
-
-# 로그
-*.log
-*.log.*
-
-# 백업
-backup/
 
 # Git
 .git/
