--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,7 @@ venv/
 env/
 ENV/
 
-# 민감한 정보 (중요!) 🔐
-data/secrets.db
-.env
-*.env
-
-# DB (필요시 공유 가능, 하지만 로컬 개발용은 제외)
+# DB (로컬 데이터는 제외)
 data/stock_data.db
 data/*.db
 
