🏦 feat: 한국투자증권 Open Trading API 통합
주요 변경사항:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
1. 한국투자증권 API 모듈 추가
   • kis_crypto.py: 암호화/복호화 시스템
   • kis_auth.py: API 인증 및 토큰 관리
   • kis_api.py: REST API 클라이언트
   • init_kis_settings.py: 초기 설정 스크립트

2. 데이터 수집 개선
   • 한국 주식: KIS API 우선 사용
   • 실패 시 FinanceDataReader로 자동 fallback
   • 미국 주식: FinanceDataReader만 사용
   • 안정성 극대화

3. 보안 강화
   • App Key, App Secret 암호화 저장
   • 암호화 키 .gitignore 추가
   • DB에 암호화된 데이터만 저장

4. 문서 작성
   • docs/KIS_API_GUIDE.md: 상세 설정 가이드
   • README.md: 데이터 소스 정보 추가

5. 의존성 추가
   • cryptography>=41.0.0
   • requests>=2.31.0

기능:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
✅ 실시간 한국 주식 시세 조회
✅ 일봉 데이터 수집 (1년)
✅ 자동 토큰 관리 및 캐싱
✅ API 장애 시 자동 fallback
✅ 멀티 유저 지원 유지

다음 단계:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
🔜 WebSocket 실시간 시세 연동
🔜 주문 API 통합 (매수/매도)
🔜 실시간 알림 강화

참고:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📚 KIS API 가이드: docs/KIS_API_GUIDE.md
🔗 GitHub: https://github.com/koreainvestment/open-trading-api
🏦 API 포털: https://apiportal.koreainvestment.com

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ venv/
 env/
 ENV/
 
-# DB (로컬 데이터는 제외)
+# DB & 암호화 키 (로컬 데이터는 제외)
 data/stock_data.db
 data/*.db
+data/.kis_key
+.kis_key
 
 # 로그
 logs/*.log
