📦 feat: NAS 배포를 위한 설정 마이그레이션 도구
주요 기능:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
1. 설정 내보내기 (export_settings.py)
   • settings 테이블 → JSON
   • users 테이블 → JSON
   • user_watchlist → JSON
   • KIS API 설정 포함 (암호화된 상태)

2. 설정 가져오기 (import_settings.py)
   • JSON → DB로 복원
   • 기존 데이터 덮어쓰기
   • KIS 암호화 키 확인

3. NAS 마이그레이션 가이드
   • 개발 환경 → NAS 이동
   • 단계별 가이드
   • 트러블슈팅

포함 데이터:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
• Settings (8개)
  - bot_token
  - default_chat_id
  - default_investment_amount
  - kis_app_key (암호화)
  - kis_app_secret (암호화)
  - kis_account_code
  - kis_access_token
  - kis_token_expired

• Users (2명)
  - jjongz (활성)
  - bluejm (비활성)

• User Watchlist (5개)
  - 종목 + 국가 + 활성화 상태

사용 방법:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
# 1. 개발 환경에서 내보내기
python export_settings.py
→ settings_backup.json 생성

# 2. NAS로 파일 복사
scp settings_backup.json admin@nas:/path/
scp data/.kis_key admin@nas:/path/data/

# 3. NAS에서 가져오기
python import_settings.py
→ DB에 설정 복원

장점:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
✅ 간편한 마이그레이션
✅ 민감 정보 안전하게 이동
✅ 백업/복원 자동화
✅ Git 제외 (.gitignore)
✅ 단계별 가이드 제공

보안:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
🔒 settings_backup.json: .gitignore
🔒 KIS 설정: 암호화된 상태로 전송
🔒 data/.kis_key: 별도 복사 필요

파일:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
• export_settings.py (NEW!)
  - DB → JSON 내보내기
  - KIS 키 파일 안내

• import_settings.py (NEW!)
  - JSON → DB 가져오기
  - 확인 프롬프트
  - 데이터 검증

• docs/deployment/NAS_MIGRATION_GUIDE.md (NEW!)
  - 완전한 마이그레이션 가이드
  - 트러블슈팅
  - 체크리스트

• .gitignore
  - settings_backup.json 추가
  - settings_backup_*.json 추가

• README.md
  - 파일 구조 업데이트
  - 마이그레이션 가이드 링크

실행 예시:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━
$ python export_settings.py

📦 내보낸 데이터:
  • Settings: 8개 (KIS: 5개 포함)
  • Users: 2명
  • Watchlist: 5개

✅ settings_backup.json 생성 완료!

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ data/*.db
 data/.kis_key
 .kis_key
 
+# Settings backup (민감한 정보 포함)
+settings_backup.json
+settings_backup_*.json
+
 # 로그
 logs/*.log
 *.log
