--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     environment:
       - TZ=Asia/Seoul
       - PYTHONUNBUFFERED=1
+      # 디버그 모드: true로 설정시 24시간 알림 활성화
+      - DEBUG_MODE=${DEBUG_MODE:-false}
     
     # 로그 제한
     logging:
