🔧 config: DEBUG_MODE 기본값을 true로 변경
24시간 알림 테스트를 위해 DEBUG_MODE 기본값을 true로 설정
시간 제한 없이 모든 시간대에 알림 수신 가능

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - TZ=Asia/Seoul
       - PYTHONUNBUFFERED=1
       # 디버그 모드: true로 설정시 24시간 알림 활성화
-      - DEBUG_MODE=${DEBUG_MODE:-false}
+      - DEBUG_MODE=${DEBUG_MODE:-true}
     
     # 로그 제한
     logging:
