feat: Flask 웹 대시보드 추가
- web/ 디렉토리에 Flask 앱 구현
  - app.py: Flask 앱 팩토리
  - auth.py: 로그인/로그아웃/비밀번호 설정
  - routes/: 메인, 종목관리, API 라우트

- database.py: password_hash 컬럼 및 인증 관련 메서드 추가

- templates: Tailwind CSS 기반 반응형 UI
  - 로그인/비밀번호 설정
  - 대시보드 (종목별 분석 카드)
  - 종목 관리 (추가/삭제)
  - 차트 보기
  - 설정 (알림 토글, 비밀번호 변경)

- docker-compose.yml: stock-web 서비스 추가 (포트 5000)
- requirements.txt: Flask, Gunicorn 추가

로그인 ID는 users 테이블 name 사용, 첫 로그인 시 비밀번호 설정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,35 @@ services:
         reservations:
           memory: 256M
 
+  # 웹 대시보드
+  stock-web:
+    build: .
+    container_name: stock_web
+    restart: unless-stopped
+    command: gunicorn --bind 0.0.0.0:5000 --workers 2 --timeout 120 'web.app:create_app()'
+    
+    ports:
+      - "5000:5000"
+    
+    volumes:
+      - ./data:/app/data
+      - ./charts:/app/charts
+    
+    environment:
+      - TZ=Asia/Seoul
+      - PYTHONUNBUFFERED=1
+      - FLASK_SECRET_KEY=${FLASK_SECRET_KEY:-change-this-secret-key}
+    
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 128M
+
