--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,17 +43,7 @@ services:
     build: .
     container_name: stock_web
     restart: unless-stopped
-    command: >
-      gunicorn
-      --bind 0.0.0.0:8080
-      --workers 1
-      --threads 2
-      --timeout 300
-      --keep-alive 5
-      --access-logfile -
-      --error-logfile -
-      --log-level debug
-      'web.app:create_app()'
+    command: python -m flask --app web.app:create_app run --host=0.0.0.0 --port=8080
     
     ports:
       - "8080:8080"
