--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,8 @@ services:
     restart: unless-stopped
     command: python -m flask --app web.app:create_app run --host=0.0.0.0 --port=8080
     
-    ports:
-      - "8080:8080"
+    # Tailscale 접근을 위해 호스트 네트워크 사용
+    network_mode: host
     
     volumes:
       - ./data:/app/data
@@ -64,11 +64,4 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-    
-    deploy:
-      resources:
-        limits:
-          memory: 384M
-        reservations:
-          memory: 192M
 
