--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,10 @@ finance-datareader>=0.9.50
 pandas>=2.2.0
 numpy>=1.26.0
 matplotlib>=3.8.0
+python-telegram-bot>=20.0
 schedule>=1.2.0
 cryptography>=41.0.0
 requests>=2.31.0
 websockets>=12.0
 pycryptodome>=3.19.0
-flask>=3.0.0
-gunicorn>=21.0.0
-yfinance>=0.2.0
-pytz>=2024.1
 
