--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cryptography>=41.0.0
 requests>=2.31.0
 websockets>=12.0
 pycryptodome>=3.19.0
+peewee>=3.17.0
 flask>=3.0.0
 gunicorn>=21.0.0
 yfinance>=0.2.0
